<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/person_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/person_last_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/dateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/person_date_of_birth"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastName" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/gender"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateOfBirth" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/person_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/editDateOfBirth"
        app:layout_constraintTop_toTopOf="@id/name" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/person_last_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/editDateOfBirth"
        app:layout_constraintTop_toTopOf="@id/lastName" />

    <EditText
        android:id="@+id/editDateOfBirth"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/person_date_of_birth"
        android:imeOptions="actionNext"
        android:inputType="date"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/dateOfBirth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dateOfBirth"
        app:layout_constraintTop_toTopOf="@id/dateOfBirth" />

    <EditText
        android:id="@+id/editGender"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/gender"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/editDateOfBirth"
        app:layout_constraintTop_toTopOf="@id/gender" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editGender" />

    <Button
        android:id="@+id/viewAll"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/view_all"
        app:layout_constraintEnd_toEndOf="@id/addButton"
        app:layout_constraintStart_toStartOf="@id/addButton"
        app:layout_constraintTop_toBottomOf="@id/addButton" />

</android.support.constraint.ConstraintLayout>